// Copyright 2020 Insolar Network Ltd.
// All rights reserved.
// This material is licensed under the Insolar License version 1.0,
// available at https://github.com/insolar/assured-ledger/blob/master/LICENSE.md.

syntax = "proto3";

package rms;

// stubs, do NOT run code generate

message Binary {}
message Reference {}
message RecordBody {}
message RecordBodyDigests {}

message Any {}
message AnyLazy {}
message AnyRecord {}
message AnyRecordLazy {}
